--- a/Stacks, Queues & Heaps.ipynb
+++ b/Stacks, Queues & Heaps.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3]\n",
+      "[1, 3, 5]\n",
+      "5\n",
       "3\n",
-      "1\n",
-      "1\n",
-      "None\n"
+      "3\n",
+      "1\n"
      ]
     }
    ],
@@ -121,6 +121,7 @@
     "my_stack = Stack()\n",
     "my_stack.push(1)\n",
     "my_stack.push(3)\n",
+    "my_stack.push(5)\n",
     "print(my_stack)\n",
     "print(my_stack.pop())\n",
     "print(my_stack.peek())\n",
@@ -132,8 +133,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Stack using Python collections.deque\n",
+    "deque is more efficient way for using stack in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['xyz.com/', 'xyz.com/one', 'xyz.com/two', 'xyz.com/three'])\n",
+      "deque(['xyz.com/', 'xyz.com/one', 'xyz.com/two'])\n",
+      "deque(['xyz.com/', 'xyz.com/one'])\n",
+      "deque(['xyz.com/', 'xyz.com/one', 'xyz.com/four'])\n",
+      "xyz.com/four\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "stack = deque()\n",
+    "\n",
+    "stack.append(\"xyz.com/\")\n",
+    "stack.append(\"xyz.com/one\")\n",
+    "stack.append(\"xyz.com/two\")\n",
+    "stack.append(\"xyz.com/three\")\n",
+    "\n",
+    "print(stack)\n",
+    "stack.pop()\n",
+    "print(stack)\n",
+    "stack.pop()\n",
+    "print(stack)\n",
+    "\n",
+    "stack.append(\"xyz.com/four\")\n",
+    "print(stack)\n",
+    "print(stack[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
-    "### Queue using Python Deque\n",
+    "### Queue using Python List\n",
     "Queue is a FIFO data structure -- first-in, first-out.  \n",
     "Deque is a double-ended queue, but we can use it for our queue.  \n",
     "We use append() to enqueue an item, and popleft() to dequeue an item.  \n",
@@ -142,14 +188,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deque([5, 10])\n",
+      "[1200.4, 1200.3, 1200.2, 1200.1]\n",
+      "[1200.4, 1200.3, 1200.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Queue using List \n",
+    "# use insert and pop\n",
+    "price_queue = []\n",
+    "price_queue.insert(0,1200.10)\n",
+    "price_queue.insert(0,1200.20)\n",
+    "price_queue.insert(0,1200.30)\n",
+    "price_queue.insert(0,1200.40)\n",
+    "print(price_queue)\n",
+    "price_queue.pop()\n",
+    "print(price_queue)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Queue using Python Deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([5, 10, 15])\n",
       "5\n"
      ]
     }
@@ -159,6 +240,7 @@
     "my_queue = deque()\n",
     "my_queue.append(5)\n",
     "my_queue.append(10)\n",
+    "my_queue.append(15)\n",
     "print(my_queue)\n",
     "print(my_queue.popleft())"
    ]
@@ -338,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
